syntax = "proto3";

option csharp_namespace = "gRPC_Client";

package calculator;

service Calculator {
  rpc Multiply(MultiplyRequest) returns (MultiplyResponse);
}

message MultiplyRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message MultiplyResponse {
  int32 result = 1;
}